k8s/account/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: account-app
  template:
    metadata:
      labels:
        app: account-app
    spec:
      containers:
        - name: account-app
          image: darpru/account-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
              protocol: TCP
            - containerPort: 8185
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      restartPolicy: Always
