k8s/account/account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
spec:
  selector:
    app: account-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8085
    - protocol: TCP
      name: management
      port: 81
      targetPort: 8185
  type: NodePort
