k8s/account/account-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: account-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: account-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 8085
